--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "main": "index.tsx",
   "scripts": {
     "start": "expo start --dev-client",
+    "debug": "npx expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.0",
     "expo": "~47.0.3",
-    "expo-splash-screen": "~0.17.4",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
