chore: add app-center sdk

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-navigation/stack": "^6.3.4",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
+    "appcenter": "^4.4.5",
+    "appcenter-analytics": "^4.4.5",
+    "appcenter-crashes": "^4.4.5",
     "expo": "~47.0.3",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
